Modified to new file naming
Former-commit-id: 27ed29506b6ea920cc631e9ac9f95c1051f62d1c

--- a/vasca/examples/inspect_gPhoton.ipynb
+++ b/vasca/examples/inspect_gPhoton.ipynb
@@ -17,26 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.io import ascii\n",
-    "from astropy import units as uu\n",
-    "\n",
     "region_name = \"TDS\" # \"WD\" #\"MDIS_10-800\" # _ELAISN1\n",
-    "\n",
-    "#SDSS _142118.18+523547.1 215.3258439968967\t52.596545351520945\n",
-    "#src_str = \"\"\"label\tra\tdec rg_src_id\n",
-    "#GALEX_J221409.8+005245 333.5413675869932 0.8794347888579439 3403\n",
-    "#PB_5130 334.61900740472345 -0.0033813554025151345 1891\n",
-    "#GALEX_J100236.8+023834 150.65361426058803 2.643111670533707 16149\n",
-    "#GALEX_J161634.4+541011 244.14364033210146 54.16991388586225 45461\"\"\"\n",
-    "#run_src_ids = range(len(src_str))\n",
-    "\n",
     "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] \n",
-    "\n",
-    "#tt_srcs = ascii.read(src_str)\n",
     "outdir = \"./resources/gPhoton_out/\"\n",
-    "#load_past_results = False\n",
-    "\n",
-    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n"
+    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\""
    ]
   },
   {
@@ -83,6 +67,7 @@
     "import numpy as np\n",
     "from astropy.io import ascii\n",
     "from astropy.table import Table\n",
+    "from astropy import units as uu\n",
     "import os\n",
     "from vasca.utils import mag2flux, flux2mag, tgalex_to_astrotime\n",
     "import vasca.visualization as vvis\n",
