Changed logger file format
Former-commit-id: 7ed06ac6f139fcd57684e6983fd3ffd899db0305

--- a/vasca/examples/inspect_gPhoton.ipynb
+++ b/vasca/examples/inspect_gPhoton.ipynb
@@ -33,7 +33,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=4</i>\n",
-       "<table id=\"table140383255330144\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140141882375136\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0933b6779d34e0f838a85ce7416150e",
+       "model_id": "52319a0f315d4c47aafd5d4e1a35a262",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,14 +147,14 @@
     "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4), clear=True)\n",
     "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src, flux_var=\"flux\") #\n",
     "\n",
-    "    plt.errorbar(tt_gap['t_mean'],1.132*tt_gap['flux'],yerr=tt_gap['flux_err'],fmt=\".\")\n",
+    "    plt.errorbar(tt_gap['t_mean'],1.132*tt_gap['flux'],yerr=tt_gap['flux_err'],fmt=\"c*\")\n",
     "    plt.yscale('log')\n",
     "\n",
     "    #Add FUV if existent\n",
     "    fname_fuv = fname.replace(\"_nuv\",\"_fuv\")\n",
     "    if os.path.isfile(fname_fuv):\n",
     "        tt_gap_fuv = get_lc(fname_fuv)\n",
-    "        plt.errorbar(tt_gap_fuv['t_mean'],1.132*tt_gap_fuv['flux'],yerr=tt_gap_fuv['flux_err'],fmt=\".\")\n",
+    "        plt.errorbar(tt_gap_fuv['t_mean'],1.132*tt_gap_fuv['flux'],yerr=tt_gap_fuv['flux_err'],fmt=\"c+\")\n",
     "    \n",
     "    plt.show()\n",
     "    display(tt_src)\n",
