--- a/vasca/examples/inspect_gPhoton.ipynb
+++ b/vasca/examples/inspect_gPhoton.ipynb
@@ -33,7 +33,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=4</i>\n",
-       "<table id=\"table140236026824592\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140454472581472\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b33c10f6e1494b5d9d84d1971a0879ec",
+       "model_id": "fae6823a2c174ebf9d0721b604db8a10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,20 +144,21 @@
     "    fname = outdir+\"gPhoton_ra\"+str(round(tt_src[\"ra\"][0],5))+\"_dec\"+str(round(tt_src[\"dec\"][0],5))+\"_nuv_app.npy\"\n",
     "    tt_gap, sel_gap = get_lc(fname)\n",
     "\n",
-    "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4), clear=True)\n",
+    "    fig_lc_src = plt.figure(\"Light curve\",figsize=(12, 8), clear=True)\n",
     "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src, flux_var=\"flux\") #\n",
     "\n",
-    "    plt.errorbar(tt_gap['t_mean'],1.132*tt_gap['flux'],yerr=tt_gap['flux_err'],fmt=\"k*\")\n",
-    "    plt.errorbar(tt_gap['t_mean'][sel_gap],1.132*tt_gap['flux'][sel_gap],yerr=tt_gap['flux_err'][sel_gap],fmt=\"c*\")\n",
+    "    plt.errorbar(tt_gap['t_mean'],1.132*tt_gap['flux'],yerr=tt_gap['flux_err'],fmt=\"k*\", label=\"gPhoton all\", alpha=0.3)\n",
+    "    plt.errorbar(tt_gap['t_mean'][sel_gap],1.132*tt_gap['flux'][sel_gap],yerr=tt_gap['flux_err'][sel_gap],fmt=\"k*\",label=\"gPhoton sel\")\n",
     "    plt.yscale('log')\n",
     "\n",
     "    #Add FUV if existent\n",
     "    fname_fuv = fname.replace(\"_nuv\",\"_fuv\")\n",
     "    if os.path.isfile(fname_fuv):\n",
     "        tt_gap_fuv,sel_gap_fuv = get_lc(fname_fuv)\n",
-    "        plt.errorbar(tt_gap_fuv['t_mean'],1.132*tt_gap_fuv['flux'],yerr=tt_gap_fuv['flux_err'],fmt=\"k+\")\n",
-    "        plt.errorbar(tt_gap_fuv['t_mean'][sel_gap_fuv],1.132*tt_gap_fuv['flux'][sel_gap_fuv],yerr=tt_gap_fuv['flux_err'][sel_gap_fuv],fmt=\"c+\")\n",
-    "    \n",
+    "        plt.errorbar(tt_gap_fuv['t_mean'],1.132*tt_gap_fuv['flux'],yerr=tt_gap_fuv['flux_err'],fmt=\"k+\", label=\"gPhoton all\", alpha=0.3)\n",
+    "        plt.errorbar(tt_gap_fuv['t_mean'][sel_gap_fuv],1.132*tt_gap_fuv['flux'][sel_gap_fuv],yerr=tt_gap_fuv['flux_err'][sel_gap_fuv],fmt=\"k+\",label=\"gPhoton sel\")\n",
+    "\n",
+    "    plt.legend()\n",
     "    plt.show()\n",
     "    display(tt_src)\n",
     "    display(tt_gap)\n",
