--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -23,27 +23,6 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "region_name = \"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
-    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
-    "sort_par = \"rg_src_id\" # \"flux\"\n",
-    "redo_src_sel = False\n",
-    "only_sel_srcs = False\n",
-    "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
-    "srcs_ids = []\n",
-    "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] # WDs TDS\n",
-    "#srcs_ids = []\n",
-    "#srcs_ids = [4546 ,12718 ,69253 ,228174 ,229551 ,] #WD \"CAINGSGII_10-800\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a47713fa-f128-425f-a2d0-754e64ffb654",
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -51,38 +30,24 @@
      "text": [
       "Nr sources: 1230 selected: 871\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><i>Table length=4</i>\n",
-       "<table id=\"table140115339360624\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
-       "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
-       "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
-       "<tr><td>-1</td><td>35 .. 5</td><td>334.61900740472345</td><td>-0.0033813554025151345</td><td>0.08654309</td><td>-0.13358614</td><td>0.16820572</td><td>0.97304916</td><td>0.5630017</td><td>2410</td><td>0.18017368</td><td>1 .. 2</td><td>True</td><td>121.59981 .. 40.61505</td><td>0.32700354 .. 0.6793138</td><td>0.0012762442 .. 0.0012225002</td><td>22.828146 .. 9.024125</td><td>2.1874502e-27 .. 0.001186736</td><td>6.2001452 .. 4.5217357</td><td>1.0003184 .. 1.007664</td><td>0.08853569 .. 0.31262133</td><td>-1</td><td>1891</td><td>2</td><td>0.33295098</td><td>0.0059931264</td><td>WD*</td><td>PB  5130</td><td>WD*|WD*|WD*|WD*|*|Opt|UV|WD?|WD?</td><td>1.3299500</td><td>121.7450</td><td>pc</td><td>0.3261</td></tr>\n",
-       "<tr><td>-1</td><td>35 .. 4</td><td>333.5413675869932</td><td>0.8794347888579439</td><td>0.10153956</td><td>-0.2568612</td><td>0.15229508</td><td>0.99949604</td><td>0.37336546</td><td>6503</td><td>0.08153211</td><td>1 .. 2</td><td>True</td><td>20.24083 .. 5.189896</td><td>0.16559538 .. 0.40037686</td><td>0.06014167 .. -0.020882767</td><td>25.663895 .. 0.08260181</td><td>0.0 .. 0.9400651</td><td>26.422163 .. 0.13361952</td><td>0.9598218 .. 1.0394988</td><td>-3.864632 .. 0.3762283</td><td>-1</td><td>3403</td><td>2</td><td>0.34424755</td><td>0.02826839</td><td>WD*</td><td>GALEX J221409.8+005245</td><td>WD*|WD*|WD*|*|Opt|UV</td><td>--</td><td>439.0000</td><td>pc</td><td>0.2825</td></tr>\n",
-       "<tr><td>-1</td><td>28 .. 9</td><td>150.65361426058803</td><td>2.643111670533707</td><td>0.08557914</td><td>-0.08412055</td><td>0.19236396</td><td>0.8580123</td><td>0.66507405</td><td>44620</td><td>0.12717035</td><td>1 .. 2</td><td>True</td><td>106.96241 .. 66.50696</td><td>0.34322292 .. 0.6652977</td><td>0.0007799396 .. 0.0010192677</td><td>12.584814 .. 8.828741</td><td>5.945311e-11 .. 0.026203794</td><td>3.846406 .. 2.1749918</td><td>1.0030466 .. 1.0014558</td><td>0.71483445 .. 0.09157375</td><td>-1</td><td>16149</td><td>2</td><td>0.6084019</td><td>0.006708973</td><td>WD?</td><td>GALEX J100236.8+023834</td><td>*|*|G|Opt|UV|WD?|WD?</td><td>1.9900000</td><td>293.2980</td><td>pc</td><td>0.4992</td></tr>\n",
-       "<tr><td>-1</td><td>12 .. -1</td><td>244.14364033210146</td><td>54.16991388586225</td><td>0.16000032</td><td>-0.1349428</td><td>0.17470829</td><td>0.4975613</td><td>0.578193</td><td>12469</td><td>0.3236669</td><td>1 .. 0</td><td>True</td><td>46.202312 .. -1.0</td><td>0.4356251 .. -1.0</td><td>0.019377798 .. -100.0</td><td>43.763363 .. -1.0</td><td>7.33e-43 .. -1.0</td><td>20.80549 .. -1.0</td><td>1.0119411 .. -100.0</td><td>1.0512818 .. -10000.0</td><td>-1</td><td>45461</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD?</td><td>GALEX J161634.4+541011</td><td>*|*|Opt|UV|WD?|WD?</td><td>--</td><td>93.6920</td><td>pc</td><td>0.9987</td></tr>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "<Table length=4>\n",
-       "fd_src_id  nr_det          ra         ... distance_unit distance_result\n",
-       "                          deg         ...                    arcsec    \n",
-       "  int32   int32[2]      float64       ...     bytes4        float32    \n",
-       "--------- -------- ------------------ ... ------------- ---------------\n",
-       "       -1  35 .. 5 334.61900740472345 ...            pc          0.3261\n",
-       "       -1  35 .. 4  333.5413675869932 ...            pc          0.2825\n",
-       "       -1  28 .. 9 150.65361426058803 ...            pc          0.4992\n",
-       "       -1 12 .. -1 244.14364033210146 ...            pc          0.9987"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
+    "region_name = \"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
+    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
+    "sort_par = \"rg_src_id\" # \"flux\"\n",
+    "redo_src_sel = False\n",
+    "only_sel_srcs = False\n",
+    "show_skymaps = True\n",
+    "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
+    "srcs_ids = []\n",
+    "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] # WDs TDS\n",
+    "#srcs_ids = []\n",
+    "#srcs_ids = [4546 ,12718 ,69253 ,228174 ,229551 ,] #WD \"CAINGSGII_10-800\"\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------------------------------------------------\n",
+    "\n",
     "%matplotlib widget\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
@@ -129,8 +94,54 @@
     "nr_srcs = len(tt_srcs)\n",
     "tt_srcs.sort(sort_par)\n",
     "tt_srcs.add_index(\"rg_src_id\")\n",
-    "display(tt_srcs)\n",
-    "#display(rg.tt_fields)"
+    "#display(tt_srcs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23df4759-a6cd-462d-8fa6-dcd4c14bd395",
+   "metadata": {},
+   "source": [
+    "### Show all info for one source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4e438a82-e94a-43c6-89ce-49862abc76dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd76bcf77ad24de19201ca4bc6caf159",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='rg_src_id', options=(1891, 3403, 16149, 45461), value=1891), Outpu…"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def display_src_info(rg_src_id=0):\n",
+    "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4), clear=True)\n",
+    "    plt.cla()\n",
+    "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src) #\n",
+    "    plt.show()\n",
+    "    \n",
+    "    tc_src = rg.get_src_from_id(rg_src_id)\n",
+    "    table_names = [\"tt_sources\",\"tt_simbad\"] # ,\"tt_coadd_sources\"\n",
+    "    for table_name in table_names:\n",
+    "        if table_name in tc_src._table_names:\n",
+    "            print(\"\\n\",table_name,\":\")\n",
+    "            display(tc_src.__dict__[table_name])\n",
+    "\n",
+    "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])"
    ]
   },
   {
@@ -150,7 +161,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "564af865f9dc45569d8a08be5b0e1653",
+       "model_id": "06f76396320c43a08f79d809c4ca3f11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,56 +182,8 @@
     "    lc_max = lc_min + lc_block_srcs if lc_min + lc_block_srcs<=nr_srcs-1 else nr_srcs\n",
     "    vvis.plot_light_curve(rg,fig=fig_lc, rg_src_ids = tt_srcs[\"rg_src_id\"][lc_min:lc_max], ylim = [1.2,550])\n",
     "    plt.show()\n",
-    "    display(tt_srcs[lc_min:lc_max]) #[show_lc_pars]\n",
+    "    #display(tt_srcs[lc_min:lc_max]) #[show_lc_pars]\n",
     "widgets.interactive( plot_lc_range, block_nr=(0,nr_blocks-1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23df4759-a6cd-462d-8fa6-dcd4c14bd395",
-   "metadata": {},
-   "source": [
-    "### Show all info for one source"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4e438a82-e94a-43c6-89ce-49862abc76dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8da7128273e3469a8477c654cb7e77a7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(1891, 3403, 16149, 45461), value=1891), Outpu…"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def display_src_info(rg_src_id=0):\n",
-    "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4), clear=True)\n",
-    "    plt.cla()\n",
-    "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src) #\n",
-    "    plt.show()\n",
-    "    \n",
-    "    tc_src = rg.get_src_from_id(rg_src_id)\n",
-    "    tc_src.info()\n",
-    "    table_names = [\"tt_sources\",\"tt_simbad\",\"tt_coadd_sources\",\"tt_suource_lc\"]\n",
-    "    for table_name in table_names:\n",
-    "        if table_name in tc_src._table_names:\n",
-    "            print(\"\\n\",table_name,\":\")\n",
-    "            display(tc_src.__dict__[table_name])\n",
-    "\n",
-    "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])"
    ]
   },
   {
@@ -233,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
     "tags": []
@@ -242,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7b9af26f32649819fd7e671f00767fe",
+       "model_id": "ca40fd55c5324cb7b0c27c2ea2b1d84d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,24 +285,16 @@
     "list_srcs = tt_srcs[\"rg_src_id\"]\n",
     "if len(srcs_ids)>0:\n",
     "    list_srcs = srcs_ids\n",
-    "     \n",
-    "widget = widgets.interactive( plot_sky_src, rg_src_id=list_srcs,\n",
-    "                    fd_idx=widgets.IntSlider(min=0, max=10, value=0, step=1),\n",
-    "                    vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,] \n",
     "\n",
-    "controls = widgets.HBox(widget.children[:-1], layout = widgets.Layout(flex_flow='row wrap'))\n",
-    "output = widget.children[-1]\n",
-    "display(widgets.VBox([controls, output]))\n",
-    "# straight NUV, dashed FUV"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b65aa26f-ae0b-44c7-86f7-e22da3a9e976",
-   "metadata": {},
-   "source": [
-    "### Sources to look into\n",
-    "6213\t244.39756945883389\t55.14934913850557  periodic"
+    "if show_skymaps:\n",
+    "    widget = widgets.interactive( plot_sky_src, rg_src_id=list_srcs,\n",
+    "                        fd_idx=widgets.IntSlider(min=0, max=10, value=0, step=1),\n",
+    "                        vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,] \n",
+    "    \n",
+    "    controls = widgets.HBox(widget.children[:-1], layout = widgets.Layout(flex_flow='row wrap'))\n",
+    "    output = widget.children[-1]\n",
+    "    display(widgets.VBox([controls, output]))\n",
+    "    # straight NUV, dashed FUV"
    ]
   },
   {
@@ -352,28 +307,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75b739e3d4534f39bf148b9dc359de83",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=42, description='rg_fd_id', max=84, min=1), Output()), _dom_classes=('wi…"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_sky_field(rg_fd_id):\n",
     "    if rg_fd_id not in rg.tt_fields[\"rg_fd_id\"]:\n",
@@ -385,7 +324,8 @@
     "    ax, tt_src_shown = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections, sky_region_wcs = (fd.get_sky_region(),wcs),only_selected=only_sel_srcs) # \n",
     "    plt.show()\n",
     "    display(tt_src_shown) #[show_map_pars]\n",
-    "widgets.interactive( plot_sky_field, rg_fd_id=(rg.tt_fields[\"rg_fd_id\"].min(),rg.tt_fields[\"rg_fd_id\"].max()))"
+    "if show_skymaps:    \n",
+    "    widgets.interactive( plot_sky_field, rg_fd_id=(rg.tt_fields[\"rg_fd_id\"].min(),rg.tt_fields[\"rg_fd_id\"].max()))"
    ]
   },
   {
