--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -23,6 +23,27 @@
    "metadata": {
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "region_name = \"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
+    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
+    "sort_par = \"rg_src_id\" # \"flux\"\n",
+    "redo_src_sel = False\n",
+    "only_sel_srcs = False\n",
+    "show_skymaps = False\n",
+    "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
+    "\n",
+    "srcs_ids = []\n",
+    "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] # WDs TDS\n",
+    "#srcs_ids = []\n",
+    "#srcs_ids = [4546 ,12718 ,69253 ,228174 ,229551 ,] #WD \"CAINGSGII_10-800\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "250fba4b-1add-4439-81d7-3e282470e4d8",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -33,21 +54,6 @@
     }
    ],
    "source": [
-    "region_name = \"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
-    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
-    "sort_par = \"rg_src_id\" # \"flux\"\n",
-    "redo_src_sel = False\n",
-    "only_sel_srcs = False\n",
-    "show_skymaps = True\n",
-    "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
-    "srcs_ids = []\n",
-    "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] # WDs TDS\n",
-    "#srcs_ids = []\n",
-    "#srcs_ids = [4546 ,12718 ,69253 ,228174 ,229551 ,] #WD \"CAINGSGII_10-800\"\n",
-    "\n",
-    "\n",
-    "# --------------------------------------------------------------------------------------------------------\n",
-    "\n",
     "%matplotlib widget\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
@@ -107,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4e438a82-e94a-43c6-89ce-49862abc76dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd76bcf77ad24de19201ca4bc6caf159",
+       "model_id": "1611b67d13e643ca9804aa0a1bd0c878",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +128,7 @@
        "interactive(children=(Dropdown(description='rg_src_id', options=(1891, 3403, 16149, 45461), value=1891), Outpu…"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06f76396320c43a08f79d809c4ca3f11",
+       "model_id": "41169d72ca0f4636badde8ff1d7bd2da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,7 +175,7 @@
        "interactive(children=(IntSlider(value=0, description='block_nr', max=0), Output()), _dom_classes=('widget-inte…"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,27 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca40fd55c5324cb7b0c27c2ea2b1d84d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(1891, 3403, 16149, 45461), value=1891…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_sky_src(rg_src_id=0, fd_idx=0, vis_idx = -1):\n",
     "    \n",
@@ -307,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "tags": []
